# virtual-camera-youtube

./: Cargo.toml  LICENSE.md  MAKE87.yml  README.md  mediamtx.yml  pyproject.toml
app/: main.py
build_kit/: Dockerfile  Dockerfile.dev
schema/: swagger.json
src/: main.rs
